@startuml

title __BELONGINGS's Class Diagram__\n

  namespace jovic.dragan.pj2.personel {
    namespace belongings {
      class jovic.dragan.pj2.personel.belongings.FlyingLicence {
          - ID : int
          {static} - count : int
          + FlyingLicence()
      }
    }
  }
  

  namespace jovic.dragan.pj2.personel {
    namespace belongings {
      class jovic.dragan.pj2.personel.belongings.Passport {
          - ID : int
          {static} - count : int
          + Passport()
      }
    }
  }
  

  jovic.dragan.pj2.personel.belongings.FlyingLicence .up.|> java.io.Serializable
  jovic.dragan.pj2.personel.belongings.FlyingLicence o-- jovic.dragan.pj2.personel.Pilot : owner
  jovic.dragan.pj2.personel.belongings.Passport .up.|> java.io.Serializable
  jovic.dragan.pj2.personel.belongings.Passport o-- jovic.dragan.pj2.personel.Person : owner


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
